fix collapsable :alien:

--- a/app/design/frontend/Sm/aloza/web/css/_general.less
+++ b/app/design/frontend/Sm/aloza/web/css/_general.less
@@ -2223,7 +2223,7 @@ legend {
     }
     /* :checked */
     #colapsable input:checked ~ .tab-content {
-      max-height: 10em;
+      max-height: 23em;
     }
     /* Icon */
     #colapsable label::after {
